# PrivacyPreservingSupplyGame

./: .gitignore  README.md
EzPC/EzPC/EzPC/: codegencppfloat.ml  codegensecfloat.ml
EzPC/SCI/: CMakeLists.txt
EzPC/SCI/accuracy-geodesic/: test_accuracy.cpp
EzPC/SCI/cmake/: SCIConfig.cmake
EzPC/SCI/lenet/: CMakeLists.txt  lenet.cpp
EzPC/SCI/results/: ABYFloat-basic-op.csv  ABYFloat-geodesic.csv  EMP-float-bench.csv  EMP-geodesic-bench.csv  FP-geodesic.csv  FP-op-new-new.csv  FP-op-new.csv  FP-op-plus.csv  FP-op.csv  MP-SPDZ-ring.csv  prune-results-ours.py  prune-results.py
EzPC/SCI/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cleartext_library_float.cpp  cleartext_library_float.h  cmake_install.cmake  defines_float.h  globals.h  globals_float.cpp  globals_float.h  install_manifest.txt  library_fixed_uniform.cpp  library_float.cpp  library_float.h  library_float_beacon.cpp
EzPC/SCI/src/FloatingPoint/: CMakeLists.txt  Cos_27-1.poly  Cos_27-2.poly  Cos_27.poly  Erf_27-1.poly  Erf_27-2.poly  Erf_27.poly  Exp2_27.poly  Expa_27-1.poly  Expa_27-2.poly  Expa_27.poly  Expb_27-1.poly  Expb_27-2.poly  Expb_27.poly  Lna_27-1.poly  Lna_27-2.poly  (+36 more)
EzPC/SCI/tests/: CMakeLists.txt  test_ABY_geodesic.cpp  test_accuracy_geodesic.cpp  test_batched_iknp.cpp  test_batched_iknp_cot.cpp  test_bench_fp.cpp  test_bool_array.cpp  test_fix_array.cpp  test_fp_array.cpp  test_fp_math.cpp  test_fp_ml.cpp  test_iknp_cot.cpp  test_library_fixed.cpp  test_matmul_crossterms.cpp  test_matmul_mux.cpp  test_mill_and_equality.cpp  test_ot.cpp  test_ot.h  test_relu.cpp  test_ring_div.cpp  test_ring_library_fixed.cpp  test_triple_generator.cpp
EzPC/SCI/vital/: ActorBackward0.cpp  ActorForward0.cpp  ActorForward_1batch0.cpp  CMakeLists.txt  CriticBackward0.cpp  CriticForward0.cpp
Supply-Chain/marl/: .gitignore  Player0.py  Player1.py  SampleArrayByPlayer0_check.txt  action_lim_high.txt  algorithm_environment.py  algorithms.py  algorithms_Player0.py  algorithms_Player1.py  algorithms_finalRewardPlot.py  comp_maddpg.py  multi_chain_model.py  mvt_Player0Actor.txt  mvt_Player1Critic.txt  run_tree_world.py  run_tree_world_SimulationContinuationPlot.py  run_tree_world_finalRewardPlot.py  run_tree_world_firstSimulation.py  util.py  wNb_Player0Actor_targ.txt  wNb_Player0Critic.txt  wNb_Player0Critic_targ.txt  wNb_Player1Actor.txt  wNb_Player1Critic.txt
Supply-Chain/marl/actor_critic/: __init__.py  actor_critic_config.py  actor_critic_networks.py  actor_critic_updates.py
Supply-Chain/marl/armax/: 2-0-1_quantity_model.pickle  armax.py  rolling_forecast.py  strawberry_data_clean.csv
Supply-Chain/marl/polished_algs/: marl_algs.py
Supply-Chain/marl/supply_game/: player.py  tree_world.py  tree_world_Player0.py  tree_world_Player1.py  tree_world_finalRewardPlot.py
Supply-Chain/marl/world/: farmer.py
(+76 files in other folders)
