macro (add_test_OT _name)
	add_executable(${_name}-OT "test_ring_${_name}.cpp")
    target_link_libraries(${_name}-OT SCI-OT) 
endmacro()

macro (add_test_HE _name)
    add_executable(${_name}-HE "test_field_${_name}.cpp")
    target_link_libraries(${_name}-HE SCI-HE) 
endmacro()

macro (add_test_OT_old _name)
	add_executable(${_name}-OT "test_${_name}.cpp")
    target_link_libraries(${_name}-OT SCI-OT) 
endmacro()

add_test_OT(matmul)
add_test_OT(value_extension)
add_test_OT(truncation)
add_test_OT(relu)
add_test_OT(argmax)
add_test_OT(aux_protocols)
add_test_OT(maxpool)
add_test_OT(hadamard_product)
add_test_OT(sigmoid)
add_test_OT(exp)
add_test_OT(tanh)
add_test_OT(sqrt)
add_test_OT(library_fixed)

add_test_HE(relu)
add_test_HE(maxpool)
add_test_HE(argmax)
add_test_HE(conv)
add_test_HE(fc)
add_test_HE(elemwise_prod)

add_test_OT_old(bench_fp)
add_test_OT_old(ABY_geodesic)
add_test_OT_old(bool_array)
add_test_OT_old(fix_array)
add_test_OT_old(fp_array)
add_test_OT_old(fp_ml)
add_test_OT_old(mill_and_equality)

add_test_OT_old(ot)
add_test_OT_old(iknp_cot)
add_test_OT_old(batched_iknp_cot)
add_test_OT_old(batched_iknp)
add_test_OT_old(matmul_crossterms)
add_test_OT_old(matmul_mux)
add_test_OT_old(triple_generator)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
find_package(MPFR 2.3.0 REQUIRED)
add_executable(fp_math-OT "test_fp_math.cpp")
target_include_directories(fp_math-OT PUBLIC ${MPFR_INCLUDES}) 
target_link_libraries(fp_math-OT SCI-OT ${MPFR_LIBRARIES}) 

add_executable(accuracy_geodesic-OT "test_accuracy_geodesic.cpp")
target_include_directories(accuracy_geodesic-OT PUBLIC ${MPFR_INCLUDES}) 
target_link_libraries(accuracy_geodesic-OT SCI-OT ${MPFR_LIBRARIES}) 

add_subdirectory(GC)
